--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -6,12 +6,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-bottom: 2%;
+  padding: 2%;
   position: relative;
 }
 .h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 150%;
+  margin-bottom: 2%;
+}
+.h2 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 140%;
+  margin-bottom: 1%;
+  margin-top: 1%;
 }
 .content {
   width: 100%;
