--- a/src/app/table/styles.module.scss
+++ b/src/app/table/styles.module.scss
@@ -3,6 +3,16 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
+  align-items: center;
 }
 .tableContent {
+  width: 50%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.heading {
+  margin-bottom: 2%;
+  font-weight: 500;
 }
