--- a/src/app/table/styles.module.scss
+++ b/src/app/table/styles.module.scss
@@ -5,9 +5,12 @@
   height: fit-content;
   align-items: center;
 }
+body {
+  overflow-x: hidden;
+}
 .tableContent {
   width: 50%;
-  margin-top: 5%;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   justify-content: center;
